--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <div style="text-align:center">
         淘宝攻略
     </div>
+    <div style="align:center">
+        <img url="https://p6-tt.byteimg.com/origin/dfic-imagehandler/ec661275-71f6-414b-ad5a-4993aa862e29" />
+    </div>
 </body>
 </html>
