--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         淘宝攻略
     </div>
     <div style="align:center">
-        <img url="https://p6-tt.byteimg.com/origin/dfic-imagehandler/ec661275-71f6-414b-ad5a-4993aa862e29" />
+        <img src="https://p6-tt.byteimg.com/origin/dfic-imagehandler/ec661275-71f6-414b-ad5a-4993aa862e29" />
     </div>
 </body>
 </html>
