--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div style="text-align:center">
         淘宝攻略
     </div>
+    <div align="center">
+        <img src="https://p6-tt.byteimg.com/origin/dfic-imagehandler/ec661275-71f6-414b-ad5a-4993aa862e29" />
+    </div>
     <div>
         <p>物欲横流，信息泛滥。我们总是在寻找，却总是求而不得。</p>
         <p>你想要教程知识？你想要学习指导？你想要购物褥毛？你想要生活窍门？你想要工作助手？淘宝攻略，分享衣食住行、工作学习、教程源码、投资理财的最新资讯和优质内容，一网打尽最优解。</p>
